# ChangeLog for dev-libs/nss
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.348 2014/02/01 03:40:13 vapier Exp $

  01 Feb 2014; Mike Frysinger <vapier@gentoo.org> nss-3.15.4.ebuild:
  Mark m68k/s390/sh stable.

  27 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> -nss-3.15.2.ebuild,
  -nss-3.15.3.ebuild, -nss-3.15.3.1.ebuild,
  -files/nss-3.12.6-gentoo-fixup-warnings.patch,
  -files/nss-3.14.1-gentoo-fixups-r1.patch, -files/nss-3.14.2-x32.patch,
  -files/nss-3.14.3_sync_with_upstream_softokn_changes.patch,
  -files/nss-3.15.1-fipstest-warnings.patch:
  Removed old...

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for sparc, wrt bug #498172

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for ia64, wrt bug #498172

  23 Jan 2014; Mike Frysinger <vapier@gentoo.org> nss-3.15.4.ebuild:
  Add aarch64 arch to avoid clashing with arm* in build system.

  22 Jan 2014; Mike Frysinger <vapier@gentoo.org> nss-3.15.4.ebuild:
  Add arm64 love.

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for arm, wrt bug #498172

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for alpha, wrt bug #498172

  17 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for ppc, wrt bug #498172

  17 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for ppc64, wrt bug #498172

  16 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for x86, wrt bug #498172

  16 Jan 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.15.4.ebuild:
  Stable for amd64, wrt bug #498172

  15 Jan 2014; Jeroen Roovers <jer@gentoo.org> nss-3.15.4.ebuild:
  Stable for HPPA (bug #498172).

*nss-3.15.4 (09 Jan 2014)

  09 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> +nss-3.15.4.ebuild:
  Version bump.
