@@ -8,23 +8,23 @@ AUX nss-3.15-x32.patch 1308 SHA256 485686744485824c95823d593864695f5b417c7ba2e67
 DIST nss-3.14.1-add_spi+cacerts_ca_certs.patch 25018 SHA256 82ca25982828fd7153ad15fc6e81408c115476eeeb4045d3a71469380b56824b SHA512 2aafbd972b073061bfd66a66a4b50060691957f2910f716f7a69d22d655c499f186f05db2101bea5248a00949f339327ba8bfffec024c61c8ee908766201ae00 WHIRLPOOL c9fe397e316dac7983b187acf7227078ebd8f8da5df53f77f2564489e85f123c4d2afb88d56e8dc14b9ebfffe8a71ade4724b3c1ea683c5c4c487cb3a64eda43
 DIST nss-3.15.4-pem-support-20140109.patch.xz 28400 SHA256 bcdd3decd9a7e33e240af899ead32fb92c9bf623bc99fc4b60ca4e08bcf92b82 SHA512 59066b73357ae96d3f18749b8f3bd07548d8f5e6a7b8b1f2bf227ac95ee6d3ad8ccfa60471de41f7b73f37db8e80e948c34109c69e96e958be094140e026504e WHIRLPOOL b08f463a6f699957737f3d7dda8e25e15658097d8a538c2596b94c55777afdf6526ab041e617c54ae709bdce4f1acc2aa19da619eb98e128a1d0cd0dc1de230d
 DIST nss-3.15.4.tar.gz 6366271 SHA256 14d69a0735c5af6b3cc12591f7ebf272203e889f09104182148091d0af682d7c SHA512 21ca81b636f7e230715556bc874d5c1c4f370c6fe57a39cb12fa349d0414a88e13aa931060613a793f7267868e026eaf167cbab5f2a5e8759e7a4b176d97fc6a WHIRLPOOL 7ebf8a60e7db5ee8e90137430f1b97d591fc11d02771aac027a1ff702f17ff74a8c78f4f77fb92aab1d10d6e0ff63d2e72e4bbf3d489ba60d778cb02868c2ec6
-EBUILD nss-3.15.4.ebuild 7498 SHA256 3aa27a0c1c40642080bf4678813748d58704472404afc5f0028322cef8bb184b SHA512 b9bef5a00c6000e75f26715d65dd987d44a9d7e1561c9628d96caf8c7a24e9aa84185ad69808b824742504ead7156a7b2be37aa04cf06db37c248d6947bdf7fa WHIRLPOOL 18a463a3da93406936382ef40ff2f942a5987dfd7921e9c355ff99e0777ddf2494193b23db8e352a577f9d92b874769f1bf09ed7bce73ed531784fb31d544954
-MISC ChangeLog 44176 SHA256 3263a4a4d8904cf3618ff4d78c95888709a66aebe7dab8930c768beb946ea1c6 SHA512 9276b2b02e77e5044221c3e2da0dcc2f8ce1b9d3ebe797e66d19030da5fc1c5012eb014abab7a93a98580559f2128da6442e12e502ee69fc1fa35f5c7eec89d8 WHIRLPOOL 179ad62c45fa8d12fe06508e81f4c087b4ae0d739b3688744c399a50d8a0d574d171f4f3f8ad6b0148b24624764fd2ad89dd7cad90a70c64cc9c6ce4ee71ab98
+EBUILD nss-3.15.4.ebuild 7497 SHA256 9e9f714c0dad52e14b147d272ceff71376d8b45725e7563b1af84afb49768209 SHA512 0b95499c659774c86ea9ad66ead30d942b8c656339b0cc4cb52aae12f6826b3996d33b9424b0a5e7bc54c08af776151dfb5f8e5ddcb4be934eb8245cb679b7dc WHIRLPOOL df8a3c6f7fd45f92e5430ec27ed2ff240e59113d52ea1125689f9eee9d75b7fbdbb50a41f3e65ad0cd6c459aea109764a5465a0aa5612ca3be08bd6ddf1b1c65
+MISC ChangeLog 44280 SHA256 ed822755375ea3d37cb2357163161eb28bfe607f1ba1b0f4d0d6272989deaadc SHA512 8ea17788f2a6f9d294d073f615dd5aee830baa751113c25394aceb8e9537ff0889cd48e4569b1f0a342bbe327d24b226e434b57577d17b3a51c2abd0558c8753 WHIRLPOOL c181e23bf557b6a5101fddc20cc174917ee0e41308f1dab5b65b7fc02d930305530eeda22c04c1b2f26c4e41296ad15f7a562d6f32ab8d4b99ebabf7a63eb793
 MISC metadata.xml 323 SHA256 e6fef8af50b09ae8cd84d42ca66b3716d47046ca2c643cb842a0cbc75196c1c5 SHA512 d4631c5de361b5b04d5ec36061fcb4762d47efd93b977c63e26d921109d0b2c2639f803442600b363c91937f2e5b2acd7ef0dde8b85abf801d814f8f70c20dfb WHIRLPOOL 38c7d7ccfbaf04fa026fe377b5810c187cf4da4c9c9f77ee0f80fc0d68bffd398a65eb37ec3457a351ec80405d0bd71ae09612efc6cff16e047ba01ec87ccac5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS7GylAAoJEPGu1DbS6WIAIV8QAIVhjjlrKhpjUSdMiEXhMLVx
-mqcsMCM2khUlJCkhhiW/sXRrxYyyE9yUHTp5jfoXoy0sDmlMLYpqZ7A+DccRb8An
-g96d8VucCt4RRGT5hJd1hB9AhBsyEPdLpYnOC64vZncK6EL1sqx/fR1llj7EsDbs
-3HWAzYNBScHWCbcSXKgJLt6xoKsNLGUJxWC8pNY9iOwFoKnZ7kKlqtq0F3wMyicD
-5Mz2vWXX7YRdi2/TVOJ5zf5bWUX7autKp690Ap61D5FmtXYh0KSTmnxw2SnE/NvB
-lVDidNdx7xcZY6OBS4W6COh+boR7Nswv/l5YyeDlhPQBPRfG/kFwmAtQ7dD8I+0/
-3dHbVWXo1AyPQnP39rsILYq7oqOkuE3n4Ld97idCyFG87EowkDap+5Gdaci+vcfg
-LoqEAIVlEvVrAWvCzjOOwjB5wRJDRoiBZDod9jwdaw4FcBrcanA+KOGgW2NBn6xq
-Qz65F5q1VBRIdlJG9Qk2QaTl5LzT/r7d+r7Zr+haXgkgvn446wr05c0NICw8in9K
-QCLje0Sw7b2TIhiQAL6K6ki6S8YiZbGGdyrR7eyHZIVGg2eG7sIqlqoAbhvXmnGE
-ss6U5O6WxeCo29+Gf7BCDo/p0518b9ov+IO/gs9xtsoD2uO5gf5m4l5Mb65HBeNN
-aEAXj1lE4okE/38vlrjK
-=5V3a
+iQIcBAEBCAAGBQJS7GznAAoJEPGu1DbS6WIAGO4P/AjoUL7qfAK0PiW7m/YqvZZP
+eKzTVqdtd0+Yx/+4URSZrx/s9iqQgujeRRBHaRWl+OetHdZUvSTHqGGvbk0r8GQK
+llkWsUnyjqA7ocO031jwH1XP2qykiJfLAsy58ubmaTgFl6qtifnAGURLRq70TgXd
+xBRPOxykmkDuaaqAmKvRfV17tmW1e1AnlSMSO/hfBHpBDHSBnTV+uuNTSPli4FOu
+ey9ZWuOG4X72eieGchH4QqBrCV2c3g2Y4tmAnwv6u7MWiBBEZVgUEpAGE++pbArh
+ysj30A2oPmwL0BBVs8q28A2TPi33wgrlGjR+M+hJen/C0IiAphvCDiEcgVAd5+PS
+FppwS7G+57wk1lWwTb+NW4I1XgHp05NlQnFgbkSVQYPRyQokbubltK7G4reuNthF
+L+8bmN8/XXKVPQ0at1YtJWijzbwaBWEKV8Yw2xz8Elk9aS7ntba9E9pn5rcACvKG
+1Zkl+6UG3OiqkOLABlvpDh+NAzSGGYCYmgzgKPtcR10Oslx62EDe/HdG5hhopJjU
+UgtWvLFbWPAWIdUWBpgKdkHm4ScDGiYlYGbWVuD9MWEub/DKtHmle2GS2PT9jIbe
+Fz4XgjsGz+8AfBwLPOsuDEpTt7KbHPtBX6l5UVUHvXbrQ9HTgufSRFOLydGMIGAU
++j2Rql8y+T/VT97AHgD3
+=gKkU
 -----END PGP SIGNATURE-----
